# orgChartApi

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  ReadMe.md  config.json  docker-compose.yml  harness.cpp  it.json  main.cc  postman.json  replace.txt  run_docker.sh  schema.json
.github/: CODEOWNERS
controllers/: AuthController.cc  AuthController.h  DepartmentsController.cc  DepartmentsController.h  JobsController.cc  JobsController.h  PersonsController.cc  PersonsController.h
coverage_report/: it.json  report.AuthController.cc.7b92379c7754a6d666b11015f86f7f53.html  report.AuthController.h.18ab508f8ce10a060bed982d1a11d5cb.html  report.DepartmentsController.cc.273b4b1246fbfa4387d0132e299d307a.html  report.DepartmentsController.h.8eac82f4f37782fabf4b125e88e87ad5.html  report.JobsController.cc.9a6ccd512859e74ab6eddd29af66ff1b.html  report.JobsController.h.b7df059ddc82232748242069021e16dd.html  report.Jwt.cc.150e077eeaf5f068b04b4c3f05930f32.html  report.JwtPlugin.cc.7eaf7425c516c35852c60a183f5de9b3.html  report.LoginFilter.cc.2c309284d88f0df28a8dcedc1c7b6e70.html  report.PersonsController.cc.8aad1807790d43d673d55e4a1521e2da.html  report.PersonsController.h.f0c942553dd579b936b438262ace0bad.html  report.functions.html  report.html  report.main.cc.d759577e53e2ce061239002d8a592cc5.html  report.utils.cc.cfd9a069906bb23c408420ea3c22c3c0.html  report.utils.h.f9572ca603b8563480ab2bd93f0f37f5.html
models/: Department.cc  Department.h  Job.cc  Job.h  Person.cc  Person.h  PersonInfo.h  User.h  Users.cc  Users.h  model.json
scripts/: create_db.sql  seed_db.sql
test/: CMakeLists.txt  job_test.cc  test_controllers.cc
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: main.tsx
ui/src/api/: client.ts
ui/src/components/: AuthGate.tsx  CrudTable.tsx  Layout.tsx  OrgChart.tsx  RelatedPersonsDialog.tsx
ui/src/hooks/: useAuth.ts
ui/src/pages/: Dashboard.tsx  Departments.tsx  Jobs.tsx  Login.tsx  OrgChartPage.tsx  Persons.tsx
ui/src/theme/: index.ts
utils/: utils.h
